--- a/released/3/index.html
+++ b/released/3/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title>404 Page not found &middot; 日志</title>
+  <title>2019-08-15 &middot; 日志</title>
 
   
 
@@ -26,7 +26,7 @@
 <style>
     </style>
     <a href="https://mxr-lee.top/Vlog" class="full-screen-message">
-        Well, a fine little mess. Easy in, easy out. Another triumph.
+        Not Implemented
     </a>
 </body>
 </html>
