--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
                             </div>
                             <div class="changes timeline-content">
                                 <h4>
+                                     2020-09-14
+                                </h4>
+                                <small></small>
+                                <div>
+                                    <ul>
+<li>
+第一天上班，下午班刚上一半，就被辞职了，真是可笑
+</li>
+</ul>     
+
+                                </div>
+                            </div>
+                        </div>                	
+                	
+                       <div class="timeline-item">
+                            <div class="timeline-left">
+                                <div class="timeline-icon"></div>
+                            </div>
+                            <div class="changes timeline-content">
+                                <h4>
                                      2020-04-14
                                 </h4>
                                 <small></small>
